<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pg_web_ros</name>
  <version>0.0.0</version>
  <description>ROS 2 Python package for pubsub functionality</description>  <!-- Ajoutez une description appropriée ici -->
  <maintainer email="mohamed-anas.daggag@universite-paris-saclay.fr">anas</maintainer>
  <license>Apache License 2.0</license>  <!-- Ajoutez la déclaration de licence appropriée -->
  
  <!-- Ajoutez ces lignes pour spécifier les dépendances de test -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Ajoutez ces lignes pour spécifier les dépendances d'exécution -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
